<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".SecondFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/style_background"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginTop="8dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textview_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:text="@string/title_result"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_big"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/txt_title_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_info_results"
            android:layout_marginEnd="@dimen/margin_info_results"
            android:layout_marginTop="28dp"
            android:text="@string/title_description_result"
            android:textColor="@color/colorPrimary"
            android:textSize="24dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginEnd="@dimen/margin_info_results"
            android:layout_marginStart="@dimen/margin_info_results"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/title_result1"
            android:textColor="@color/gray_text_title"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/margin_info_results"
            android:layout_marginEnd="@dimen/margin_info_results"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/text_detail"
            android:textColor="@color/gray_text_title"
            android:textSize="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_next"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:layout_gravity="right"
                android:paddingEnd="@dimen/margin_info_results"
                android:paddingStart="@dimen/margin_info_results"
                android:layout_margin="24dp"
                android:text="@string/text_button_next"
                android:textAllCaps="false"
                android:visibility="visible"
                android:textSize="16dp"
                android:elevation="@dimen/elevation"
                android:background="@drawable/style_button"
                android:textColor="@android:color/white" />
        </LinearLayout>


        <TextView
            android:id="@+id/text_description_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <Button
            android:id="@+id/button_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous"
            android:visibility="gone" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>