<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sintomas"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.topics.PrevencionFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:background="@drawable/style_background">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="@dimen/border_specific"
                android:layout_marginStart="@dimen/natural_margin"
                android:layout_marginEnd="@dimen/natural_margin"
                android:src="@drawable/image_prevencion" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/border_specific"
                android:layout_marginStart="@dimen/margin_big"
                android:layout_marginEnd="@dimen/margin_big"
                android:background="@drawable/style_border_title"
                android:elevation="@dimen/elevation"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/border_specific"
                    android:layout_marginEnd="@dimen/border_specific"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:fontFamily="@font/segoe_ui_bold"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_big"
                    android:text="@string/title_prevencion" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginStart="@dimen/margin_big"
                android:layout_marginEnd="@dimen/margin_big"
                android:elevation="@dimen/elevation"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/border_specific"
                    android:layout_marginEnd="@dimen/border_specific"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:fontFamily="@font/segoe_ui"
                    android:textColor="@color/gray_text_title"
                    android:textAlignment="inherit"
                    android:textSize="12dp"
                    android:text="@string/text_desc_prevencion" />

                <TextView
                    android:id="@+id/txt_subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/border_specific"
                    android:layout_marginEnd="@dimen/border_specific"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:fontFamily="@font/segoe_ui_bold"
                    android:textColor="@color/gray_text_title"
                    android:textAlignment="inherit"
                    android:textSize="12dp"
                    android:text="@string/subtitle_desc_prevencion" />
                <TextView
                    android:id="@+id/txt_subtitle_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/border_specific"
                    android:layout_marginEnd="@dimen/border_specific"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:fontFamily="@font/segoe_ui"
                    android:textColor="@color/gray_text_title"
                    android:textAlignment="inherit"
                    android:textSize="12dp"
                    android:text="@string/text_desc_prevencion2" />

            </LinearLayout>
        </LinearLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>